--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,18 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import BaseLayout from '../layouts/BaseLayout.astro';
+import HeroSection from '../components/HeroSection.astro';
+import AboutSection from '../components/AboutSection.astro';
+import TimelineSection from '../components/TimelineSection.astro';
+import ProjectsSection from '../components/ProjectsSection.astro';
+import ContactSection from '../components/ContactSection.astro';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const locale = 'pt-br';
 ---
 
-<Layout>
-	<Welcome />
-</Layout>
+<BaseLayout locale={locale}>
+  <HeroSection locale={locale} />
+  <AboutSection locale={locale} />
+  <TimelineSection locale={locale} />
+  <ProjectsSection locale={locale} />
+  <ContactSection locale={locale} />
+</BaseLayout>
